# e2openplugin-Bitrate

./: Makefile.am  configure.ac
bitratetool/: bitrate.cpp
plugin/: Makefile.am  __init__.py  bitrate.py  plugin.py
po/: Bitrate.pot  Makefile.am  bg.po  el.po  fi.po  fr.po  lt.po  ru.po  updateallpo.sh
